classDiagram
  %% dimensions -- auto-generated by MermaidMain, do not edit

  class BaseDim
  class BaseDimWitness {
    -def *(other:BaseDimWitness) BaseDimWitness
    -def /(other:BaseDimWitness) BaseDimWitness
    -def formatUnit(sym:String,exp:Rational) String
    -def pow(exp:Rational) BaseDimWitness
    -def toCompositeSymbol String
    -val i Rational
    -val j Rational
    -val l Rational
    -val m Rational
    -val n Rational
    ...(2 more)
  }
  class Dimension {
    <<trait>>
  }
  class DimensionWitness {
    <<trait>>
    +def toCompositeSymbol String
  }
  class DimensionsException {
    -val message String
  }
  class PowerUnit {
    -def compositeSymbol String
    -def rename(name:String) Unit~D~
    -val base Unit~_~
    -val dimensionWitness DimensionWitness
    -val power Rational
    -val symbol String
    -val toSI ExactNumber
  }
  class ProductUnit {
    -def compositeSymbol String
    -def rename(name:String) Unit~D~
    -val dimensionWitness DimensionWitness
    -val left Unit~_~
    -val right Unit~_~
    -val symbol String
    -val toSI ExactNumber
  }
  class QuotientUnit {
    -def compositeSymbol String
    -def rename(name:String) Unit~D~
    -val denominator Unit~_~
    -val dimensionWitness DimensionWitness
    -val numerator Unit~_~
    -val symbol String
    -val toSI ExactNumber
  }
  class SIUnit {
    <<trait>>
    -def rename(s:String) Unit~D~
    -val toSI ExactNumber
  }
  class ScaledUnit {
    -def rename(name:String) Unit~D~
    -val base Unit~_~
    -val compositeSymbol String
    -val dimensionWitness DimensionWitness
    -val scale Rational
    -val symbol String
    -val toSI ExactNumber
  }
  class TRat
  class TRational {
    <<trait>>
  }
  class Unit {
    <<trait>>
    +def dimensionWitness DimensionWitness
    +def rename(s:String) Unit~D~
    +def symbol String
    +def toSI ExactNumber
    -def compositeSymbol String
  }

  Dimension <|-- BaseDim
  DimensionWitness <|-- BaseDimWitness
  Unit <|-- PowerUnit
  Unit <|-- ProductUnit
  Unit <|-- QuotientUnit
  Unit <|-- SIUnit
  Unit <|-- ScaledUnit
  TRational <|-- TRat
